--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -24,19 +24,19 @@
 
 /** General Style Info **/
 body {
-	background: #003d4c;
-	color: #fff;
+	background: #FF9709;
+	color: #2B3B45;
 	font-family:'lucida grande',verdana,helvetica,arial,sans-serif;
 	font-size:90%;
 	margin: 0;
 }
 a {
-	color: #003d4c;
+	color: #081B26;
 	text-decoration: underline;
 	font-weight: bold;
 }
 a:hover {
-	color: #367889;
+	color: #FF9709;
 	text-decoration:none;
 }
 a img {
@@ -47,18 +47,18 @@ h1, h2, h3, h4 {
 	margin-bottom:0.5em;
 }
 h1 {
-	background:#fff;
-	color: #003d4c;
-	font-size: 100%;
+	/*background:#fff;*/
+	color: #081B26;
+	/*font-size: 100%;*/
 }
 h2 {
 	background:#fff;
-	color: #e32;
+	color: #2B3B45;
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
 	font-size: 190%;
 }
 h3 {
-	color: #2c6877;
+	color: #A69F95;
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
 	font-size: 165%;
 }
@@ -79,23 +79,24 @@ p {
 }
 
 #header{
-	padding: 10px 20px;
+	padding: 40px 30px;
 }
 #header h1 {
 	line-height:20px;
-	background: #003d4c url('../img/cake.icon.png') no-repeat left;
-	color: #fff;
+	/*background: #FF9709 url('../img/cake.icon.png') no-repeat left;*/
+	color: #2B3B45;
+	font-weight: bold;
 	padding: 0px 30px;
 }
 #header h1 a {
-	color: #fff;
-	background: #003d4c;
+	color: #2B3B45;
+	background: #FF9709;
 	font-weight: normal;
 	text-decoration: none;
 }
 #header h1 a:hover {
 	color: #fff;
-	background: #003d4c;
+	background: #FF9709;
 	text-decoration: underline;
 }
 #content{
@@ -163,7 +164,7 @@ table tr td {
 	border-bottom:1px solid #ddd;
 }
 table tr:nth-child(even) {
-	background: #f9f9f9;
+	background: #F2E8DD;
 }
 td.actions {
 	text-align: center;
